--- a/public/package.json
+++ b/public/package.json
@@ -6,6 +6,7 @@
   "author": "carnadaxxx <w.coronadobarrantes@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "blueimp-file-upload": "^9.21.0",
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
